fix: fake pixel effect broken on firefox mobile
Before the bottom portion of the webpage on mobile didn't have the effect properly displayed (missing).

Hopefully this is fixed. This is what ChatGPT said anyways so idk.

--- a/styles.css
+++ b/styles.css
@@ -38,12 +38,10 @@
 
 html {
 	font-family: arial; /* Sets up arial font for webpage */
-	position: relative; /* Fake pixel effect */
-	image-rendering: pixelated; /* Fake pixel effect */
 }
 
 /* Fake pixel effect */
-html::after {
+body::after {
 	content: '';
 	position: fixed;
 	top: 0;
